--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 map_krk_regular.gml filter=lfs diff=lfs merge=lfs -text
 map_small_krak.gml filter=lfs diff=lfs merge=lfs -text
+map_krk_regular filter=lfs diff=lfs merge=lfs -text
